# owkin-gigatime

./: .gitignore  .pre-commit-config.yaml  INFERENCE_NOTES.md  Makefile  README.md  pyproject.toml
gigatime/: __init__.py  constants.py  model.py
gigatime/data/: __init__.py  paths.py  s3.py  slide.py  tiling.py
gigatime/features/: README.md  __init__.py  coexpression.py  compartments.py  density.py  features.py  proximity.py  tls.py
gigatime/inference/: __init__.py  cli.py  model.py  predict.py
legacy_gigatime_repo/: README.md  db_train.py  gigatime_training.ipynb  prov_data.py
legacy_gigatime_repo/scratch/models/gigatime_training/: config.yml
notebooks/: demo_features.py  demo_inference.py  inference_tcga_luad.py
scripts/: build_feature_table.py  db_test.py  extract_features.py  extract_features_tcga_luad.py  gigatime_testing.ipynb  test_map_rendering.py
